tools/tree-sitter-bsl/grammar.js
    source_file: ($) => repeat($._top_form),

    _top_form: ($) =>
      choice(
        $.rule,
        $.deffield,
        $.intrinsic_decl,
        $.manifest,
        $.metric_decl,
        $.defenum,
        $.defvocabulary,
        $.generic_form,
      ),

    /* --- §2.3 rules --------------------------------------------------- */

    rule: ($) =>
      seq(
        '(',
        'rule',
        field('id', $.qname),
        repeat(
          choice($.rule_role, $.evidence, $.material_basis, $.fuel, $.projects_kernel),
        ),
        choice(
          seq($.anchor, choice($.material_cycle, $.organizer_products, $.organizer_practice)),
          seq(
            optional($.domain),
            optional($.anchor),
            $.bindings,
            optional($.when),
            $.effects,
          ),
        ),
        ')',
      ),

    /* §2.3: the four valued keyword options may appear in any source order,
     * so they are collected rather than sequenced. Presence and closed-set
     * membership are load checks, not tree-sitter recovery policy. */
    rule_role: (_$) =>
      seq(':role', choice('mechanic', 'recognizer', 'external-event', 'intent')),
    evidence: (_$) =>
      seq(':evidence', choice('observed', 'derived', 'calibrated', 'designed')),
    material_basis: ($) => seq(':material-basis', $.string),
    fuel: ($) => seq(':fuel', $.int_lit),
    anchor: ($) => seq('(', 'anchor', choice(':after', ':before'), $.symbol, ')'),

    material_cycle: (_$) => seq('(', 'material-cycle', ')'),
    organizer_products: (_$) => seq('(', 'organizer-products', ')'),
    organizer_practice: (_$) => seq('(', 'organizer-practice', ')'),

    bindings: ($) => seq('(', 'bindings', repeat($.binding), ')'),
    when: ($) => seq('(', 'when', $._cond, ')'),
    effects: ($) => seq('(', 'effects', repeat1($._effect_item), ')'),

    /* --- §2.4 conditions ---------------------------------------------- */

    _cond: ($) =>
      choice(
        $.bool_lit,
        $.and_cond,
        $.or_cond,
        $.not_cond,
        $.comparison,
        $.exists,
        $.forall,
      ),

    and_cond: ($) => seq('(', 'and', repeat1($._cond), ')'),
    comparison: ($) => seq('(', $.cmp, $._expr, $._expr, ')'),
    cmp: (_$) => choice(...CMP),

    exists: ($) =>
      seq('(', 'exists', $._query, optional($.elem_name), optional($._cond), ')'),
    forall: ($) =>
      seq('(', 'forall', $._query, optional($.elem_name), $._cond, ')'),

    /* --- §2.5 bindings ------------------------------------------------ */

    binding: ($) => seq('(', 'binding', $.symbol, $.bind_src, repeat($.bind_opt), ')'),

    bind_src: ($) =>
      choice(
        seq(':field', $.qname),
        seq(':const', $.qname),
        seq(':metric', $.symbol),
        ':tick',
        ':year',
        ':tick-of-year',
        seq(':tick-in-cycle', $.int_lit),
        seq(':expr', $._expr),
      ),

    bind_opt: ($) => choice(':optional', seq(':default', $.literal)),

    /* --- §2.6 queries -------------------------------------------------- */

    _query: ($) =>
      choice($.nodes, $.edges, $.neighbors, $.hyperedges, $.members_of, $.hyperedges_of),

    nodes: ($) => seq('(', 'nodes', $.enum_ref, optional($._cond), ')'),
    edges: ($) => seq('(', 'edges', $.enum_ref, optional($._cond), ')'),
    _expr: ($) =>
      choice(
        $.literal,
        $.symbol,
        $.enum_ref,
        $.arith_expr,
        $.if_expr,
        $.quantize_mass,
        $.fold,
        $._accessor,
        $.selection,
        $.intrinsic_call,
      ),

    arith_expr: ($) => seq('(', $.arith, $._expr, $._expr, ')'),
    arith: (_$) => choice(...ARITH),

    fold: ($) =>
      seq(
        '(',
        'fold',
        $.fold_op,
        $._query,
        optional($.elem_name),
        $._expr,
        optional($.weight),
        ')',
      ),
    fold_op: (_$) => choice(...FOLD_OPS),
    weight: ($) => seq(':weight', $._expr),

    field_of: ($) => seq('(', 'field-of', $._expr, $.qname, ')'),
    _effect_item: ($) => choice($._verb, $.guard, $.for_each, $.choose),

    guard: ($) => seq('(', 'guard', $._cond, repeat1($._effect_item), ')'),
    update_node: ($) => seq('(', 'update-node', $._expr, $.qname, $.update_op, ')'),
    emit: ($) => seq('(', 'emit', $.enum_ref, repeat($.payload_item), ')'),

    update_op: ($) => seq('(', choice('add', 'sub', 'set', 'scale'), $._expr, ')'),

    payload_item: ($) => seq('(', $.symbol, $._expr, ')'),

    /* --- §2.9 / §2.11 declarations --------------------------------------- */

    literal: ($) => choice($.int_lit, $.scaled_lit, $.mass_lit, $.bool_lit),

    /* A symbol in VALUE position may be spelled like a §5.2 form tag: D33
     * reserves those names against the intrinsic namespace only. */
    symbol: ($) => choice($._plain_symbol, ...RESERVED_WORDS),
    _plain_symbol: (_$) => /[a-z][a-z0-9-]*/,

    qname: (_$) => token(/[a-z][a-z0-9-]*(\/[a-z][a-z0-9-]*)+/),

    enum_ref: (_$) => token(/[A-Z][A-Za-z0-9]*\/[A-Z][A-Z0-9_]*/),

    /* §2.13 (Organization spec §1 Q12, D101): `defenum`'s type name and
     * `defvocabulary`'s <enum-kind> operand are bare — no `/MEMBER` — so
     * they need their own tokens rather than reusing `enum_ref`, whose
     * regex is the whole `Type/MEMBER` pair as ONE atomic token. These
     * two mirror `enum_ref`'s two halves exactly (bsl.ebnf's `enum-type`
     * and `enum-member` productions, §1.4), split apart because §2.13 is
     * the first construct that needs either half standalone. */
    bool_lit: (_$) => choice('#t', '#f'),

    int_lit: (_$) => token(/-?[0-9](_?[0-9])*/),

    /* AJ's slot is syntactically nonnegative; the u32 upper bound is a
     * reference-loader check. */
    scaled_lit: (_$) => token(/-?[0-9](_?[0-9])*(\.[0-9](_?[0-9])*)?[$picr]/),

    /* AJ Mass is its own nonnegative exact literal class, not another
     * binary64 scalar lane. Scale and u64-nanounit bounds are checked by the
     * reference reader. */
    string: (_$) => token(/"([^"\\\n]|\\["\\nt])*"/),

    /* Any colon-prefixed symbol, for the fallback dialects only — the
     * content grammar spells each of its keywords literally (§1.6's set is
     * closed, and an unrecognized keyword is E-PARSE-013, never ignored). */
    comment: (_$) => token(seq(';', /[^\n]*/)),
  },
});
